--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ a:hover{
     background-color: rgb(218, 0, 0);
 }
 
-a{
+.a{
     padding-left: auto;
-    font-size: 1.6em;
+    font-size: 1.5em;
     float: right;
     padding-left: 80%;
     text-decoration: none;
@@ -42,8 +42,32 @@ button{
     margin-top: 2%;
     margin-left: 1%;
     margin-right: 1%;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 button:hover{
     background-color: rgb(218, 0, 0);
+}
+
+.img{
+    width: 40%; 
+    height:100%; 
+    object-fit: cover; 
+    float: left;
+}
+
+footer{
+    background-color: rgb(24, 24, 24);
+    width: 100%;
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+.p{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 5%;
+    margin-right: 5%;
+    text-align: left;
 }
