--- a/style-mob.css
+++ b/style-mob.css
@@ -18,7 +18,7 @@ a:hover{
 
 .a{
     padding-left: auto;
-    font-size: 1.5em;
+    font-size: 1em;
     float: right;
     padding-left: 80%;
     text-decoration: none;
@@ -51,7 +51,7 @@ button:hover{
 
 .img{
     width: 40%; 
-    height:100%; 
+    height:350px; 
     object-fit: cover; 
     float: left;
 }
