--- a/style-tab.css
+++ b/style-tab.css
@@ -18,7 +18,7 @@ a:hover{
 
 .a{
     padding-left: auto;
-    font-size: 1.5em;
+    font-size: 1.3em;
     float: right;
     padding-left: 80%;
     text-decoration: none;
@@ -50,8 +50,8 @@ button:hover{
 }
 
 .img{
-    width: 40%; 
-    height:100%; 
+    width: 50%; 
+    height:300px; 
     object-fit: cover; 
     float: left;
 }
