--- a/style-mob.css
+++ b/style-mob.css
@@ -18,7 +18,7 @@ a:hover{
 
 .a{
     padding-left: auto;
-    font-size: .5em;
+    font-size: 1px;
     float: right;
     padding-left: 80%;
     text-decoration: none;
