--- a/style.css
+++ b/style.css
@@ -51,15 +51,13 @@ button:hover{
 
 .img{
     width: 40%; 
-    height:100%; 
     object-fit: cover; 
     float: left;
 }
 
-footer{
+.footer{
     background-color: rgb(24, 24, 24);
     width: 100%;
-    display: flex;
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
@@ -82,4 +80,17 @@ footer{
 container span{
     font-weight: 100px;
     text-decoration: underline;
+}
+p{
+    color: rgb(138, 138, 138);
+}
+container{
+    width: 60%; 
+    height: 100%; 
+    padding: 5%;
+}
+input{
+    background-color: rgb(134, 134, 134);
+    border-radius: 20px;
+    border-color: rgba(128, 128, 128, 0);
 }
